--- a/cicd-jenkins.html
+++ b/cicd-jenkins.html
@@ -3236,7 +3236,93 @@ docker rmi $(docker images -q)</code></pre>
 </div>
 <div class="sect2">
 <h3 id="_despliegue_en_la_vm_2">6.4. Despliegue en la VM</h3>
-
+<div class="paragraph">
+<p>Para desplegar la aplicación hello world en  l instancia de despliegue vamos a clonar el repositorio y a continuación ejecutaremos en ella la orden de Node para ponerla en marcha.</p>
+</div>
+<div class="paragraph">
+<p>Recuerda que ya he hemos realizado una configuración previa sobre la instancia de despliegue, que constituyen los  <strong>prerrequisitos</strong>:</p>
+</div>
+<div class="ulist">
+<ul>
+<li>
+<p>Instalar NodeJS</p>
+</li>
+<li>
+<p>Copiar la clave pública de despliegue para que Jenkins, que tiene la clave privada de despliegue, pueda hacer ssh sobre ella y ejecutar comandos.</p>
+</li>
+<li>
+<p>Además, para ayudarnos a lanzar <code>npm start</code> desde Jenkins, como un proceso demonio en background, usaremos <a href="https://www.npmjs.com/package/forever"><strong>forever</strong></a>. Instalalo en la  instancia de despliegue:</p>
+<div class="literalblock">
+<div class="content">
+<pre>sudo npm install forever -g</pre>
+</div>
+</div>
+</li>
+</ul>
+</div>
+<div class="paragraph">
+<p>Una vez revisados los prerrequisitos, añade la fase de despliegue al pipeline en Jenkins:</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p>Copia este nueva fase en tu pipeline, sustituyendo DEPLOY_MACHINE por el nombre DNS de tu instancia, y usa el nombre del repositorio adecuado:</p>
+</li>
+</ol>
+</div>
+<div class="listingblock">
+<div class="content">
+<pre class="rouge highlight"><code data-lang="groovy">  <span class="n">stage</span><span class="o">(</span><span class="s1">'Deploy'</span><span class="o">){</span>
+    <span class="n">steps</span> <span class="o">{</span>
+      <span class="n">sh</span> <span class="s1">'''
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "if [ ! -d 'nodeapp' ] ; then
+          git clone https://github.com/ualcnsa/nodeapp.git
+        else
+          cd nodeapp
+          git pull origin master
+        fi" <i class="conum" data-value="1"></i><b>(1)</b>
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "if pgrep node; then forever stopall; fi" <i class="conum" data-value="2"></i><b>(2)</b>
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "cd nodeapp &amp;&amp; npm install" <i class="conum" data-value="3"></i><b>(3)</b>
+        ssh -i ~/.ssh/id_rsa_deploy ubuntu@DEPLOY_MACHINE "cd nodeapp &amp;&amp; PORT=8080 forever start index.js"
+      '''</span>
+    <span class="o">}</span>
+  <span class="o">}</span></code></pre>
+</div>
+</div>
+<div class="colist arabic">
+<table>
+<tr>
+<td><i class="conum" data-value="1"></i><b>1</b></td>
+<td>Clona el repositorio si no existe en la máquina de despliegue, si existe hace un <code>pull</code></td>
+</tr>
+<tr>
+<td><i class="conum" data-value="2"></i><b>2</b></td>
+<td>Detiene el proceso <code>node</code> si existe de un despliegue anterior, usando <code>forever stop</code>.</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="3"></i><b>3</b></td>
+<td>Instala las dependencias</td>
+</tr>
+<tr>
+<td><i class="conum" data-value="4"></i><b>4</b></td>
+<td>Ejecuta la aplicación con <code>forever start</code> en el puerto 8080, que ejecuta el proceso en background como demonio.</td>
+</tr>
+</table>
+</div>
+<div class="sidebarblock">
+<div class="content">
+<div class="paragraph">
+<p>Referencias</p>
+</div>
+<div class="olist arabic">
+<ol class="arabic">
+<li>
+<p><a href="https://codelabs.developers.google.com/codelabs/cloud-create-a-nodejs-vm/">Running Node.js on a Virtual Machine codelab</a></p>
+</li>
+</ol>
+</div>
+</div>
+</div>
 </div>
 <div class="sect2">
 <h3 id="_deploy_en_un_contenedor_docker">6.5. Deploy en un contenedor Docker</h3>
@@ -3266,7 +3352,7 @@ docker rmi $(docker images -q)</code></pre>
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2020-05-11 14:56:17 +0200
+Last updated 2020-05-11 22:17:29 +0200
 </div>
 </div>
 <style>
